# backend

./: .gitignore  AGUI_FIXES_SUMMARY.md  Dockerfile  agui_app.py  main.py  package-lock.json  pyproject.toml
agents/: cgm_agent.py  food_intake_agent.py  greeting_agent.py  interrupt_agent.py  meal_planner_agent.py  mood_tracker_agent.py
database/: synthetic_health_data.db
utils/: client.py  database.py
